# ai-ugc-pipeline

./: .gitignore  CLAUDE.md  README.md  package.json  publish.config.json
.claude/: launch.json
.claude/commands/: draft-post.md  draft-week.md  ingest-post.md  refresh-post.md  update-status.md
.claude/skills/ai-cybersecurity-ugc-carousel/: SKILL.md
.claude/skills/humanizer/: ATTRIBUTION.md  SKILL.md
Content Dashboard Plan Reference/chron0s_cyb3r_w0rld Design System/: SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
assets/ai_cybersecurity_carousel_assets_ready_to_post/: README.md  asset_manifest.json  validation_notes.md
assets/claude_ai_cyber_ugc_handoff/: ATTACHMENT_MANIFEST.md  CONTENT_SYSTEM_SPEC.md  HANDOFF.md  POST_TEMPLATES.md  STARTING_PROMPT.md  ai_cybersecurity_ugc_carousel_guide.md
assets/claude_react_remotion_handoff/: ATTACH_WITH_PREVIOUS_ZIPS.md  PIPELINE_INTEGRATION_NOTES.md  REACT_REMOTION_COMPONENT_SPEC.md  REACT_REMOTION_HANDOFF.md  REACT_REMOTION_PIPELINE_SPEC.md  REACT_REMOTION_STARTING_PROMPT.md
assets/tool_stack_addendum/: AI_UGC_TOOL_STACK_ADDENDUM.md  ATTACH_THIS_WITH_PREVIOUS_ZIP.md  CLAUDE_TOOL_STACK_STARTING_PROMPT.md  ai_ugc_tool_stack_recommendations.md  open_ai_ugc_evaluation_notes.md
dashboard/: .env.example  .gitignore  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
dashboard/data/: schedule.json  sources.json
dashboard/e2e/: screenshots.spec.ts
dashboard/scripts/: dash.ts
dashboard/server/: hooks.test.ts  hooks.ts  ig.test.ts  ig.ts  index.ts  ingested.test.ts  ingested.ts  paths.ts  repo.test.ts  repo.ts  store.test.ts  store.ts  trends.test.ts  trends.ts
dashboard/shared/: types.ts
dashboard/src/: App.tsx  app.css  main.tsx
docs/publishing/: TIKTOK_AUDIT_SUBMISSION.md
pipeline/content/: BRAND_BRAIN.md  CAPTION_BANK.md  CONTENT_PIPELINE.md  DRAFT_POST_REFERENCE.md  IDEA_BACKLOG.md  INGESTED_CAROUSEL_POSTING_SCHEDULE.md  INGESTED_REEL_INSTAGRAM_GROWTH.md  POST_TEMPLATE.md  QA_CHECKLIST.md  README.md  VISUAL_PROMPT_BANK.md  VOICE_AND_TONE_GUIDE.md  WEEK_1_POSTS.md
pipeline/media/: BROLL_PROMPT_BANK.md  MEDIA_TOOL_STACK.md  MUSIC_SFX_GUIDE.md  OPEN_SOURCE_EVALUATION_MATRIX.md  VIDEO_ASSEMBLY_WORKFLOW.md  VOICEOVER_BAKEOFF.md  WEEK_1_VIDEO_EXPERIMENTS.md
renderer/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
renderer/comfyui-workflows/: README.md  flux2_klein_4b_8gb.json  flux2_klein_4b_8gb_with_upscale.json
renderer/content/posts/: 2026-06-01_ai-phishing-training.json  2026-06-02_ai-malware-hype.json  2026-06-02_ai-phishing-training.json  2026-06-03_prompt-injection-agents.json  2026-06-04_gemma4-12b-local-ai.json  2026-06-04_prompt-injection-agents.json  2026-06-05_hermes-agent-surge.json  2026-06-05_hexstrike-ai-redteam.json  2026-06-06_ai-malware-hype.json  2026-06-06_hexstrike-ai-v6.json  2026-06-07_colab-cli-agents.json  2026-06-07_hermes-desktop.json  2026-06-07_kimi-code-cli.json  2026-06-07_misotts-voice-cloning.json  2026-06-07_nemotron-3-ultra.json  2026-06-08_chatbot-log-leak.json  2026-06-08_gemma4-12b-local-ai.json  2026-06-09_deepfake-helpdesk.json  2026-06-09_fable5-cyber-gated.json  2026-06-09_mythos5-defender-edge.json  2026-06-10_cohere-north-mini-code.json  2026-06-10_copy-fail-linux-lpe.json  2026-06-10_cve-2026-23111-one-char.json  2026-06-10_dirty-frag-linux-lpe.json  2026-06-10_dirtydecrypt-linux-lpe.json  2026-06-10_fragnesia-linux-lpe.json  2026-06-10_nightmare-eclipse-github-removal.json  2026-06-10_rogueplanet-windows-zero-day.json  2026-06-11_bluehammer-cve-2026-33825.json  2026-06-11_greatxml-bitlocker-bypass.json  2026-06-11_greenplasma-system-lpe.json  2026-06-11_miniplasma-patched-lpe.json  2026-06-11_redsun-windows-lpe.json  2026-06-11_shadow-ai-inventory.json  2026-06-11_undefend-defender-dos.json  2026-06-11_yellowkey-cve-2026-45585.json  2026-06-11_yellowkey-cve-2026-50507.json  2026-06-12_fable5-jailbreak-panic.json  2026-06-14_kimi-k2.7-code-model.json  2026-06-14_velvet-ant-pam-backdoor.json
renderer/docs/: CAROUSEL_COMPONENTS.md  CONTENT_SCHEMA.md  DESIGN_SYSTEM.md  DRAFT_PIPELINE_ARCHITECTURE.md  IMAGE_MODELS.md  PIPELINE_ARCHITECTURE.md  PIPELINE_INTEGRATION_NOTES.md  PLAYWRIGHT_EXPORT_WORKFLOW.md  PROJECT_ARCHITECTURE.md  REMOTION_REEL_WORKFLOW.md  RENDERER_ARCHITECTURE.md  ROADMAP.md  RUN_IT_YOURSELF.md  WEEK_1_RENDER_TESTS.md
renderer/public/walls/: README.md  walls.json
renderer/remotion/: AudioBed.tsx  CaptionLayer.tsx  CaptionTrack.tsx  EndCard.tsx  ReelComposition.tsx  Root.tsx  Scene.tsx  theme.ts  tsconfig.json
renderer/scripts/: align-whisper.py  align.mjs  art-comfyui.mjs  art-flux.py  art.mjs  build-package.ts  draft-reference.mjs  draft-week.mjs  draft.mjs  export-carousel.ts  fit-smoke-playwright.ts  fit-smoke.mjs  fit-smoke.test.mjs  fix-pipeline-links.mjs  free-comfyui.mjs  import-bg.mjs  lib.ts  new-post.ts  pipeline.mjs  render-reel.ts  set-status.mjs  upscale-comfyui.mjs  validate.ts  voice-bark.py  voice-http.mjs  voice-voxcpm.py  voice.mjs
renderer/scripts/lib/: post-status.mjs
renderer/scripts/publish/: config.ts  metadata.test.ts  metadata.ts  state.test.ts  state.ts
renderer/scripts/publish/auth/: cli.mjs  oauth.test.ts  oauth.ts  tiktok.ts  youtube.ts
renderer/src/: App.tsx  styles.css
renderer/src/components/carousel/: CarouselDeck.tsx  CarouselSlide.tsx  SlideBackground.tsx  slides.tsx  useFitToFrame.ts
renderer/src/design/: fit.test.ts  fit.ts  tokens.ts
renderer/src/lib/: content-checks.test.ts  content-checks.ts  posts.ts  schema.ts
scripts/: refresh_token.test.ts  refresh_token.ts  register_token_task.ps1
website/: README.md  index.html  package.json  pnpm-lock.yaml
website/src/: App.tsx  index.css
(+351 files in other folders)
