# Python ML deps for the ai-ugc-pipeline renderer (uv-managed venv at renderer/.venv).
#
# This powers the LOCAL ML helpers only:
#   - bun run voice        → VoxCPM2 TTS          (voxcpm, soundfile)
#   - bun run align        → Whisper word-sync    (faster-whisper)
#   - bun run art:diffusers→ legacy diffusers FLUX (diffusers/transformers/accelerate/bitsandbytes)
# Primary image generation now runs through ComfyUI (separate env at E:\ComfyUI\.venv),
# driven by bun run art → scripts/art-comfyui.mjs. The bun/JS layer is in package.json.
#
# Setup / reproduce this env (run from renderer/):
#   uv sync                      # create/refresh .venv from this file
#   # or, targeted:  uv pip install -e .
# Torch/torchaudio/torchvision are pulled from PyTorch's CUDA 12.8 index (below), and the
# trio is version-locked together so torchaudio matches torch — a mismatch is what caused
# VoxCPM's "WinError 127" (torchaudio's native _torchaudio.pyd failing to load against torch).

[project]
name = "ai-ugc-renderer-ml"
version = "0.1.0"
description = "Local ML helpers (VoxCPM TTS, faster-whisper alignment, legacy diffusers FLUX) for the ai-ugc-pipeline renderer."
readme = "docs/RUN_IT_YOURSELF.md"
requires-python = ">=3.10,<3.13"  # VoxCPM requires <3.13

dependencies = [
  # --- TTS: bun run voice (voxcpm2) ---
  "voxcpm>=2.0.3",
  "soundfile>=0.13",
  # --- STT word-alignment: bun run align ---
  "faster-whisper>=1.2",
  # --- Legacy local diffusers art path: bun run art:diffusers ---
  # 0.38.0 fixes the trust_remote_code bypass via custom_pipeline / local custom
  # components (GHSA, 2 high; was pinned >=0.37, resolving to vulnerable 0.37.1).
  "diffusers>=0.38",
  "transformers>=5.0",
  # diffusers 0.38.0 (the security fix) requires safetensors>=0.8.0rc0, which is still
  # pre-release (no 0.8.0 stable yet). Request it explicitly so uv permits the pre-release;
  # drop the rc pin back to a stable range once safetensors 0.8.0 final ships.
  "safetensors>=0.8.0rc0",
  "accelerate>=1.0",
  "sentencepiece>=0.2",
  "protobuf>=5",
  "pillow>=11",
  "bitsandbytes>=0.49",
  # --- shared ---
  "huggingface-hub>=1.0",
  "numpy>=2.0",
  # --- PyTorch (CUDA 12.8); trio locked together so torchaudio matches torch.
  # Bumped 2.6.0 → 2.8.0 (torchvision 0.21.0 → 0.23.0) to clear GHSA-887c-mr87-cxwp
  # (medium, fixed 2.8.0) + GHSA-3749-ghw9-m3mg (low). cu124 has no 2.8.0 wheels → cu128. ---
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
]

# Pull torch/torchaudio/torchvision from PyTorch's CUDA 12.8 wheels (not PyPI).
# `explicit = true` keeps this index scoped to the packages routed below.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Use the CUDA index on Windows/Linux; macOS has no CUDA wheels (falls back to PyPI).
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]
